<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">禽兽盒子</string>
    <string name="common_tv_left_text">返回</string>
    <string name="common_tv_cancel_text">取消</string>
    <string name="common_tv_confirm_text">确定</string>
    <string name="common_tv_delete_text">删除</string>
    <string name="common_tv_finish_text">完成</string>
    <string name="common_get_camera_permission_failure">获取照相机权限失败</string>
    <string name="common_get_external_storage_permission_failure">获取SD卡权限失败</string>
    <string-array name="main_tv_tab_text">
        <item>首页</item>
        <item>音乐</item>
        <item>会话</item>
        <item>联系人</item>
        <item>我的</item>
    </string-array>
    <string name="homepage_tv_source_prompt_text">作者</string>
    <string name="homepage_tv_translator_prompt_text">翻译者</string>
    <string name="homepage_tv_time_prompt_text">时间</string>
    <string name="me_tv_click_2_login_text">点击登录</string>
    <string name="me_tv_login_2_have_more_function_text">登录后，体验更多功能</string>
    <string name="me_my_collection">我的收藏</string>
    <string name="me_turning_robot">图灵机器人</string>
    <string name="me_magic_tower">魔塔</string>
    <string name="me_puzzle">拼图</string>
    <string name="me_klotski">华容道</string>
    <string name="me_exit_current_account">退出当前账号</string>
    <string name="me_contact_list">通讯录</string>
    <string name="me_weather">天气</string>
    <string name="me_wheel_of_fortune">命运之轮</string>
    <string name="me_chart">图表</string>
    <string name="me_qr_code_scan">二维码扫描</string>
    <string name="me_pei_qi">啥是佩奇</string>
    <string name="me_video_player">视频播放</string>
    <string name="me_test">测试界面</string>
    <string name="login_tv_login_text">Login</string>
    <string name="login_tv_register_text">Register</string>
    <string name="login_et_username_hint">请输入用户名</string>
    <string name="et_login_password_hint">请输入密码</string>
    <string name="login_btn_login_or_register_text">登录</string>
    <string name="login_btn_login_or_register_text2">注册</string>
    <string name="conversation_tv_title_text">会话</string>
    <string name="conversation_tv_search_text">搜索</string>
    <string name="conversation_btn_mark_unread_text">标为未读</string>
    <string name="conversation_btn_mark_unread_text_2">标为已读</string>
    <string name="conversation_btn_delete_text">删除</string>
    <string-array name="conversation_tv_last_msg_time_text">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </string-array>
    <string name="conversation_tv_last_msg_content_text_image">[图片]</string>
    <string name="conversation_tv_last_msg_content_text_voice">[语音]</string>
    <string name="friend_tv_title_text">好友</string>
    <string name="friend_tv_new_friend_text">新的朋友</string>
    <string name="friend_tv_create_group_chat">创建群聊</string>
    <string name="friend_tv_status_text">离线</string>
    <string name="friend_tv_status_text_2">在线</string>
    <string-array name="friend_tv_tab_text">
        <item>群聊</item>
        <item>好友</item>
    </string-array>
    <string name="chat_btn_press_to_speech_text">按住说话</string>
    <string name="chat_btn_press_to_speech_text2">松开结束</string>
    <string name="chat_btn_send_text">发送</string>
    <string name="chat_toast_no_more_message_text">没有更多消息了</string>
    <string name="chat_toast_can_not_send_empty_message_text">不能发送空白消息</string>
    <string name="chat_tv_cancel_send_voice_prompt_text">手指上滑,取消发送</string>
    <string name="chat_tv_cancel_send_voice_prompt_text_2">松开手指,取消发送</string>
    <string name="chat_tv_send_file_text">文件</string>
    <string name="chat_tv_send_img_text">图片</string>
    <string name="chat_tv_video_call_text">视频通话</string>
    <string name="chat_tv_audio_call_text">语音通话</string>
    <string name="chat_et_content_hint">请输入命令</string>
    <string name="chat_agree_add_text">您已经和%1$s成为好友,现在可以开始聊天了</string>
    <string name="chat_setting_tv_title_text">聊天设置</string>
    <string name="chat_setting_btn_create_group_chat_text">发起群聊</string>
    <string name="chat_setting_tv_chat_history_text">聊天记录</string>
    <string name="chat_setting_tv_top_text">消息置顶</string>
    <string name="chat_setting_tv_do_not_disturb_text">消息免打扰</string>
    <string name="chat_setting_tv_clear_chat_history_text">清空聊天记录</string>
    <string name="chat_setting_tv_join_to_blacklist_text">加入黑名单</string>
    <string name="chat_setting_tv_clear_chat_history_prompt_text">确定要清空当前的聊天记录，记录清空后将无法恢复</string>
    <string name="chat_setting_toast_clear_chat_history_success_text">聊天记录已清空</string>
    <string name="group_chat_setting_title">聊天设置(<xliff:g id="memberCount">%1$s</xliff:g>)</string>
    <string name="group_chat_setting_show_more_group_chat_member">查看更多群成员</string>
    <string name="group_chat_setting_show_fold">收起</string>
    <string name="group_chat_setting_tv_function_text_add_member">邀请</string>
    <string name="group_chat_setting_tv_function_text_delete_member">删除</string>
    <string name="group_chat_setting_tv_nickname_prompt_text">群聊名称</string>
    <string name="group_chat_setting_tv_nickname_text">未命名</string>
    <string name="group_chat_setting_tv_qr_code_text">群聊二维码</string>
    <string name="group_chat_setting_tv_manage_text">群管理</string>
    <string name="group_chat_setting_top">消息置顶</string>
    <string name="group_chat_setting_disturb">消息免打扰</string>
    <string name="group_chat_setting_nickname">我在本群的昵称</string>
    <string name="group_chat_setting_show_nickname">显示群成员昵称</string>
    <string name="group_chat_setting_clear_chat_history">清空聊天记录</string>
    <string name="group_chat_setting_clear_chat_report">投诉(暂不可用)</string>
    <string name="group_chat_setting_delete_leave">删除并退出</string>
    <string name="group_chat_setting_tv_exit_group_chat_text">确定要清空该群的聊天记录？记录清空后将无法恢复</string>
    <string name="group_chat_add_member_tv_title_text">添加群成员</string>
    <string name="group_chat_delete_member_tv_title_text">删除群成员</string>
    <string name="set_group_chat_nickname_tv_title_text">修改群名称</string>
    <string name="set_nickname_in_group_chat_tv_title_text">我在本群的昵称</string>
    <string name="friend_history_tv_title_text">新增朋友</string>
    <string name="friend_history_tv_right_text">添加</string>
    <string name="friend_history_btn_view_text">查看</string>
    <string name="friend_history_btn_view_text_2">已添加</string>
    <string name="add_friend_tv_title_text">新的朋友</string>
    <string name="add_friend_btn_search_text">搜索</string>
    <string name="add_friend_et_keyword_hint">请输入帐号、手机号、邮箱</string>
    <string name="add_friend_tv_no_data_text">没有此用户~</string>
    <string name="user_detail_tv_username_prompt">帐号：</string>
    <string name="user_detail_tv_nickname_prompt">昵称：</string>
    <string name="user_detail_tv_additional_msg_prompt">附加消息</string>
    <string name="user_detail_tv_set_remark_prompt">设置备注</string>
    <string name="user_detail_tv_area_prompt">所在地区</string>
    <string name="user_detail_tv_phone_number_prompt">手机号码</string>
    <string name="user_detail_tv_email_prompt">邮箱地址</string>
    <string name="user_detail_tv_signature_prompt">个性签名</string>
    <string name="user_detail_tv_source_prompt">用户来源</string>
    <string name="user_detail_btn_add_friend_text">添加好友</string>
    <string name="user_detail_btn_add_friend_text_2">发送消息</string>
    <string name="user_detail_btn_add_friend_text_3">接受请求</string>
    <string name="user_detail_tv_delete_contact_text">删除联系人</string>
    <string name="user_detail_tv_delete_contact_prompt_text">确定要删除和当前用户的好友关系？</string>
    <string name="set_remark_tv_title_text">修改备注</string>
    <string name="set_remark_et_remark_hint">请输入备注</string>
    <string name="set_additional_msg_tv_title_text">朋友验证</string>
    <string name="set_additional_msg_tv_right_text">发送</string>
    <string name="set_additional_msg_tv_info_text">你需要发送验证申请,等对方通过</string>
    <string name="set_additional_msg_default_additional_msg">我是<xliff:g id="nickname">%1$s</xliff:g></string>
    <string name="create_group_chat_tv_title_text">创建群聊</string>
    <string name="create_group_chat_dialog_text">创建中 请稍后…</string>
    <string name="create_group_chat_tv_group_chat_name_prompt_text">群聊名称</string>
    <string name="create_group_chat_et_group_chat_name_hint">请输入群聊名称</string>
    <string name="create_group_chat_tv_label_prompt_text">标签</string>
    <string name="create_group_chat_btn_add_label_text">添加</string>
    <string name="create_group_chat_tv_group_chat_head_img_prompt_text">群名片</string>
    <string name="create_group_chat_btn_upload_group_chat_head_img_text">上传</string>
    <string name="create_group_chat_tv_group_chat_member_list_prompt_text">群成员列表</string>
    <string name="create_group_chat_btn_add_group_chat_member_text">添加群成员</string>
    <string name="create_group_chat_btn_add_group_chat_member_count_text">添加群成员(%1$s)</string>
    <string name="create_group_chat_dialog_title_text">请选择群成员的类型</string>
    <string name="create_group_chat_btn_recent_contact_text">最近联系人</string>
    <string name="create_group_chat_btn_my_friend_text">我的好友</string>
    <string name="create_group_chat_btn_my_device_text">我的设备</string>
    <string name="create_group_chat_btn_my_application_text">我的应用</string>
    <string name="create_group_chat_btn_cancel_text">取消</string>
    <string name="create_group_chat_tv_username_text_me">自己</string>
    <string name="create_group_chat_tv_user_type_text_user">用户</string>
    <string name="create_group_chat_tv_user_type_text_device">设备</string>
    <string name="create_group_chat_tv_user_type_text_application">应用</string>
    <string name="create_group_chat_btn_take_photo">拍照</string>
    <string name="create_group_chat_btn_select_from_pictures">从手机相册选择</string>
    <string name="data_setting_tv_title_text">资料设置</string>
    <string name="data_setting_tv_head_img_prompt_text">头像</string>
    <string name="data_setting_tv_nickname_prompt_text">名字</string>
    <string name="data_setting_tv_username_prompt_text">帐号</string>
    <string name="data_setting_tv_qr_code_prompt_text">我的二维码</string>
    <string name="data_setting_btn_logout_text">退出登录</string>
    <string name="personal_head_img_tv_title_text">个人头像</string>
    <string name="personal_head_img_tv_take_photo_text">拍照</string>
    <string name="personal_head_img_tv_pick_photo_text">从手机相册选择</string>
    <string name="personal_head_img_tv_save_image_text">保存图片</string>
    <string name="personal_head_img_toast_take_photo_failure_text">拍照失败，请重新选择一张</string>
    <string name="personal_head_img_toast_pick_photo_failure_text">选择图片失败，请重新选择一张</string>
    <string name="personal_head_img_toast_save_image_success_text">已保存图片到<xliff:g id="filePath">%1$s</xliff:g></string>
    <string name="personal_head_img_toast_save_image_failure_text">保存图片失败了</string>
    <string name="set_name_tv_cancel_text">取消</string>
    <string name="set_name_tv_title_text">设置名字</string>
    <string name="set_name_tv_name_is_empty_prompt_text">没有输入名字，请重新填写</string>
    <string name="set_name_tv_i_know_text">我知道了</string>
    <string name="my_qr_code_tv_title_text">我的二维码</string>
    <string name="my_qr_code_tv_scan_qr_code_to_add_me_text">扫一扫上面的二维码图案,加我好友</string>
    <string name="my_qr_code_tv_qr_code_validity_text_prefix">该二维码7天之内(</string>
    <string name="my_qr_code_tv_qr_code_validity_text_suffix">前)有效,重新进入将更新</string>
    <string name="my_qr_code_tv_save_qr_code_text">保存图片</string>
    <string name="my_qr_code_tv_scan_qr_code_text">扫描二维码</string>
    <string name="my_qr_code_tv_reset_qr_code_text">重置二维码</string>
    <string name="my_qr_code_toast_save_success_text_prefix">已保存二维码名片到</string>
    <string name="my_qr_code_toast_save_failure_text">保存二维码名片失败了</string>
    <string name="video_player_tv_speed_text">倍速</string>
    <string name="video_player_tv_play_list_text">播放列表</string>
    <string name="video_player_tv_speed_text_2">1.5x</string>
</resources>