<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFFFF"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/px50">

                <ImageView
                    android:id="@+id/iv_head_img"
                    android:layout_width="@dimen/px120"
                    android:layout_height="@dimen/px120"
                    android:src="@drawable/default_head_img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_click_2_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/px30"
                    android:layout_marginLeft="@dimen/px30"
                    android:text="@string/me_tv_click_2_login_text"
                    android:textColor="#FF000000"
                    android:textSize="@dimen/px40"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tv_login_2_have_more_function"
                    app:layout_constraintLeft_toRightOf="@id/iv_head_img"
                    app:layout_constraintStart_toEndOf="@id/iv_head_img"
                    app:layout_constraintTop_toTopOf="@id/iv_head_img" />

                <TextView
                    android:id="@+id/tv_login_2_have_more_function"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_tv_login_2_have_more_function_text"
                    app:layout_constraintBottom_toBottomOf="@id/iv_head_img"
                    app:layout_constraintLeft_toLeftOf="@id/tv_click_2_login"
                    app:layout_constraintStart_toStartOf="@id/tv_click_2_login"
                    app:layout_constraintTop_toBottomOf="@id/tv_click_2_login" />
            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_puzzle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start|center_vertical"
                    android:text="@string/me_puzzle"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px40" />

                <Button
                    android:id="@+id/btn_turning_robot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start|center_vertical"
                    android:text="@string/me_turning_robot"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px40" />

                <Button
                    android:id="@+id/btn_magic_tower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start|center_vertical"
                    android:text="@string/me_magic_tower"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px40" />

                <Button
                    android:id="@+id/btn_contact_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start|center_vertical"
                    android:text="@string/me_contact_list"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px40" />

                <Button
                    android:id="@+id/btn_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start|center_vertical"
                    android:text="@string/me_weather"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px40" />

                <Button
                    android:id="@+id/btn_wheel_of_fortune"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start|center_vertical"
                    android:text="@string/me_wheel_of_fortune"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px40" />

                <Button
                    android:id="@+id/btn_chart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start|center_vertical"
                    android:text="@string/me_chart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px40" />

                <Button
                    android:id="@+id/btn_qr_code_scan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start|center_vertical"
                    android:text="@string/me_qr_code_scan"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px40" />

                <Button
                    android:id="@+id/btn_pei_qi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start|center_vertical"
                    android:text="@string/me_pei_qi"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px40" />

                <Button
                    android:id="@+id/btn_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start|center_vertical"
                    android:text="@string/me_test"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px40" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!--<Button-->
    <!--android:id="@+id/button"-->
    <!--android:layout_width="@dimen/px160"-->
    <!--android:layout_height="@dimen/px160"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:text="点我" />-->
</RelativeLayout>