<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background_color"
    android:orientation="vertical"
    tools:context="com.qinshou.qinshoubox.friend.view.fragment.FriendHistoryFragment">

    <com.qinshou.commonmodule.widget.TitleBar
        android:id="@+id/title_bar"
        style="@style/TitleBarBaseStyle"
        app:leftText="@string/common_tv_left_text"
        app:rightText="@string/friend_history_tv_right_text"
        app:titleText="@string/friend_history_tv_title_text">

    </com.qinshou.commonmodule.widget.TitleBar>

    <com.qinshou.commonmodule.widget.RefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_request_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="10"
            tools:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/item_rcv_friend_history"
            tools:orientation="vertical">

        </android.support.v7.widget.RecyclerView>
    </com.qinshou.commonmodule.widget.RefreshLayout>
</LinearLayout>