<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/user_detail_dialog_delete_contact_bg_"
    android:orientation="vertical"
    tools:context="com.qinshou.qinshoubox.conversation.view.dialog.ExitGroupChatDialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/px84"
        android:gravity="center"
        android:text="@string/group_chat_setting_tv_exit_group_chat_text"
        android:textColor="#FF999999"
        android:textSize="@dimen/px24" />

    <include
        layout="@layout/layout_divider_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_marginStart="@dimen/px32"
        android:layout_marginLeft="@dimen/px32"
        android:layout_marginEnd="@dimen/px32"
        android:layout_marginRight="@dimen/px32"
        android:background="#FFF2F2F2" />

    <TextView
        android:id="@+id/tv_positive"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px86"
        android:gravity="center"
        android:text="@string/common_tv_confirm_text"
        android:textColor="#FFFF0000"
        android:textSize="@dimen/px30" />


    <include layout="@layout/layout_divider" />

    <TextView
        android:id="@+id/tv_negative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px123"
        android:gravity="center"
        android:text="@string/common_tv_cancel_text"
        android:textColor="#FF333333"
        android:textSize="@dimen/px30" />
</LinearLayout>