<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background_color"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.qinshou.qinshoubox.conversation.view.fragment.GroupChatAddMemberFragment">

    <!-- 标题栏 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px96"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="@dimen/px124"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px30"
            android:layout_marginLeft="@dimen/px30"
            android:text="@string/common_tv_cancel_text"
            android:textColor="#FF666666"
            android:textSize="@dimen/px30" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/group_chat_add_member_tv_title_text"
            android:textColor="#FF333333"
            android:textSize="@dimen/px36" />

        <TextView
            android:id="@+id/tv_finish"
            android:layout_width="@dimen/px124"
            android:layout_height="@dimen/px58"
            android:layout_marginEnd="@dimen/px30"
            android:layout_marginRight="@dimen/px30"
            android:background="@drawable/set_name_tv_finish_bg"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/common_tv_finish_text"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/px30" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px30"
        android:layout_marginLeft="@dimen/px30"
        android:layout_marginTop="@dimen/px40"
        android:layout_marginEnd="@dimen/px30"
        android:layout_marginRight="@dimen/px30"
        android:layout_marginBottom="@dimen/px40"
        android:text="@string/create_group_chat_tv_group_chat_member_list_prompt_text"
        android:textColor="#FF666666"
        android:textSize="@dimen/px30" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_group_chat_member"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:itemCount="20"
        tools:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/item_rcv_group_chat_member_for_create"
        tools:orientation="vertical" />
</LinearLayout>